kustomize/kube-prometheus-stack/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kube-prometheus-stack 
spec: {}
status: {}
