kustomize/kube-prometheus-stack/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: grafana-dashboard
spec:
  rules:
  - host: grafana.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
