kustomize/kube-prometheus-stack/overlays/prod/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: kube-prometheus-stack
spec:
  entryPoints:
  - web 
  routes:
  - match: Host(`grafana.tpi2.local`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      namespace: kube-prometheus-stack 
      kind: Service
      port: 80
